--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,9 @@
     <title>{{ site.name }}{% if page.title %} | {{ page.title }}{% endif %}</title>
 
     <link href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}" rel="canonical">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Roboto|Playball" rel="stylesheet">
-    <link href="{{ '/assets/app.css' | prepend: site.baseurl }}" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Lora|Oswald" rel="stylesheet">
+    <link href="{{ '/assets/style.css' | prepend: site.baseurl }}" rel="stylesheet">
 
     <!--[if lte IE 8]>
     <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
