--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,12 @@
     <title>{{ site.name }}{% if page.title %} | {{ page.title }}{% endif %}</title>
 
     <link href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}" rel="canonical">
+
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/genericons/3.1/genericons.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Lora|Oswald" rel="stylesheet">
-    <link href="{{ '/assets/style.css' | prepend: site.baseurl }}" rel="stylesheet">
+
+    <link href="{{ '/assets/main.css' | prepend: site.baseurl }}" rel="stylesheet">
 
     <!--[if lte IE 8]>
     <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -37,7 +40,10 @@
         </ul>
     </nav>
 </header>
+
 {{ content }}
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
 <script src="{{ '/assets/app.js' | prepend: site.baseurl }}"></script>
 </body>
 </html>
