--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
     <link href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}" rel="canonical">
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdnjs.cloudflare.com/ajax/libs/genericons/3.1/genericons.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Lora|Oswald" rel="stylesheet">
 
@@ -22,28 +22,163 @@
     <![endif]-->
 </head>
 <body>
-<header>
-    <a href="{{ site.baseurl }}/">
-        <h1 id="logo">{{ site.name }}</h1>
-    </a>
-    <nav role="navigation">
-        <ul>
-            <li><a href="{{ '/authors' | prepend: site.baseurl }}">Authors</a></li>
-            &bull;
-            <li><a href="{{ '/demos' | prepend: site.baseurl }}">Demos</a></li>
-            &bull;
-            <li><a href="{{ '/contributing' | prepend: site.baseurl }}">Contributing</a></li>
-            &bull;
-            <li><a href="{{ site.github }}" target="_blank">GitHub</a></li>
-            &bull;
-            <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS</a></li>
-        </ul>
-    </nav>
-</header>
 
-{{ content }}
+    <header>
+        <nav>
+          <!-- Static navbar -->
+          <div class="navbar navbar-default" role="navigation">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="http://www.krasotaiskusstva.com/themes/evolution/index.html">
+                    <img src="assets/images/logo.png" alt="" title="" class="logo">
+                </a>
+                
+              </div>
+              <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                 <li class="active"><a href="http://www.krasotaiskusstva.com/themes/evolution/index.html">Home</a></li>
+                 <!-- dropdown -->
+                  <li class="dropdown">
+                    <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Features<b class="caret"></b></a>
+                    <ul class="filter clearfix dropdown-menu">
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-image.html">Image Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-standart.html">Standart Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-aside.html">Aside Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-video.html">Video Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-audio.html">Audio Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-quote.html">Quote Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-link.html">Link Post</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-gallery.html">Gallery Post</a></li>
+                    </ul>
+                  </li>
+                  <!-- dropdown -->
+                  
+                  <!-- dropdown -->
+                  <li class="dropdown">
+                    <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Animations<b class="caret"></b></a>
+                    <ul class="filter clearfix dropdown-menu">
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-1.html">Opacity Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-2.html">Move Up Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-3.html">Scale Up Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-4.html">Fall Perspective Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-5.html">Fly Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-6.html">Flip Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-7.html">Helix Effect</a></li>
+                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-8.html">Last Effect</a></li>
+                        
+                    </ul>
+                  </li>
+                  <!-- dropdown -->
+                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/archive.html">Archive</a></li>
+                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/portfolio.html">Portfolio</a></li>
+                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/contact.html">Contact</a></li>
+                </ul>
+              </div><!--/.nav-collapse -->
+            </div><!--/.container-fluid -->
+          </div>
+        </nav>
+    </header>
+
+
+    <section>
+      <div class="row centered">
+        <!-- wrapper -->
+        
+        {{ content }}
+
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <h1>Contrary to popular belief, Lorem Ipsum is not simply random text, just not.</h1>
+        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
+        
+        <p>Tousled banh mi gastropub, literally magna williamsburg gluten-free twee banksy echo park thundercats. Intelligentsia ut keffiyeh american apparel veniam. Cupidatat laboris non, est dreamcatcher ex kale chips placeat gluten-free squid incididunt salvia occaecat. </p>
+        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
+        </div>
+        <!-- content -->
+        
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <img src="./Evolution_files/blog.jpg" alt="">
+        <h1>Investigationes demo nstraverunt lectores legere me</h1>
+        
+        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
+        </div>
+        <!-- content -->
+        
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <h1>Cupidatat laboris non, est dreamcatcher ex kale chips placeat</h1>
+        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
+        
+        <p>Comparisons to product design are compelling but also frustrating for architects and landscape architects. Our ‘product’ is always custom, never mass-produced; our budgets are small and shrinking; our projects are large, long-lived, and difficult to prototype. But prototyping lies at the heart of iterative design research: it allows designers to test their work not just against an abstracted model but with increasingly realized versions of the thing itself.<br><br>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demo nstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
+        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
+        </div>
+        <!-- content -->
+        
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <img src="./Evolution_files/blog2.jpg" alt="">
+        <h1>Investigationes demo nstraverunt lectores legere me</h1>
+        
+        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
+        </div>
+        <!-- content -->
+        
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <img src="./Evolution_files/blog3.jpg" alt="">
+        <h1>Investigationes demo nstraverunt lectores legere me</h1>
+        
+        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
+        </div>
+        <!-- content -->
+        
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <h1>Cupidatat laboris non, est dreamcatcher ex kale chips placeat</h1>
+        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
+        
+        <p>Comparisons to product design are compelling but also frustrating for architects and landscape architects. Our ‘product’ is always custom, never mass-produced; our budgets are small and shrinking; our projects are large, long-lived, and difficult to prototype. But prototyping lies at the heart of iterative design research: it allows designers to test their work not just against an abstracted model but with increasingly realized versions of the thing itself.<br><br>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demo nstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
+        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
+        </div>
+        <!-- content -->
+
+        <!-- content -->
+        <div class="col-lg-12 line">
+        <img src="./Evolution_files/blog4.jpg" alt="">
+        <h1>Contrary to popular belief, Lorem Ipsum is not simply random text, just not.</h1>
+        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
+        
+        <p>Tousled banh mi gastropub, literally magna williamsburg gluten-free twee banksy echo park thundercats. Intelligentsia ut keffiyeh american apparel veniam. Cupidatat laboris non, est dreamcatcher ex kale chips placeat gluten-free squid incididunt salvia occaecat. </p>
+        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
+        </div>
+        <!-- content -->
+        
+        <div class="col-lg-12 lefted">
+        <h3><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">← Older posts</a></h3>
+        </div>
+        <!-- wrapper -->
+      </div>
+    </section>
+
+
+
+
+    <footer class="centered">
+        <p>© Krasota Iskusstva 2017 | <a href="http://themeforest.net/item/evolution-minimal-blog-template/20479507?ref=ki-themes" target="_blank">Buy Now!</a>
+        </p>
+    </footer>
+
+
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="{{ '/assets/app.js' | prepend: site.baseurl }}"></script>
 </body>
 </html>
