update home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,49 +35,49 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="http://www.krasotaiskusstva.com/themes/evolution/index.html">
-                    <img src="assets/images/logo.png" alt="" title="" class="logo">
+                <a class="navbar-brand" href="{{ site.url }}">
+                    <img src="{{ "/assets/images/logo.png" | absolute_url }}" alt="" title="" class="logo">
                 </a>
                 
               </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                 <li class="active"><a href="http://www.krasotaiskusstva.com/themes/evolution/index.html">Home</a></li>
+                 <li class="active"><a href="#index.html">Home</a></li>
                  <!-- dropdown -->
                   <li class="dropdown">
-                    <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Features<b class="caret"></b></a>
+                    <a href="#?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Features<b class="caret"></b></a>
                     <ul class="filter clearfix dropdown-menu">
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-image.html">Image Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-standart.html">Standart Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-aside.html">Aside Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-video.html">Video Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-audio.html">Audio Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-quote.html">Quote Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-link.html">Link Post</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/post-gallery.html">Gallery Post</a></li>
+                        <li><a href="#post-image.html">Image Post</a></li>
+                        <li><a href="#post-standart.html">Standart Post</a></li>
+                        <li><a href="#post-aside.html">Aside Post</a></li>
+                        <li><a href="#post-video.html">Video Post</a></li>
+                        <li><a href="#post-audio.html">Audio Post</a></li>
+                        <li><a href="#post-quote.html">Quote Post</a></li>
+                        <li><a href="#post-link.html">Link Post</a></li>
+                        <li><a href="#post-gallery.html">Gallery Post</a></li>
                     </ul>
                   </li>
                   <!-- dropdown -->
                   
                   <!-- dropdown -->
                   <li class="dropdown">
-                    <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Animations<b class="caret"></b></a>
+                    <a href="#?ref=ki-themes#" class="dropdown-toggle" data-toggle="dropdown">Animations<b class="caret"></b></a>
                     <ul class="filter clearfix dropdown-menu">
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-1.html">Opacity Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-2.html">Move Up Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-3.html">Scale Up Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-4.html">Fall Perspective Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-5.html">Fly Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-6.html">Flip Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-7.html">Helix Effect</a></li>
-                        <li><a href="http://www.krasotaiskusstva.com/themes/evolution/animated-index-8.html">Last Effect</a></li>
+                        <li><a href="#animated-index-1.html">Opacity Effect</a></li>
+                        <li><a href="#animated-index-2.html">Move Up Effect</a></li>
+                        <li><a href="#animated-index-3.html">Scale Up Effect</a></li>
+                        <li><a href="#animated-index-4.html">Fall Perspective Effect</a></li>
+                        <li><a href="#animated-index-5.html">Fly Effect</a></li>
+                        <li><a href="#animated-index-6.html">Flip Effect</a></li>
+                        <li><a href="#animated-index-7.html">Helix Effect</a></li>
+                        <li><a href="#animated-index-8.html">Last Effect</a></li>
                         
                     </ul>
                   </li>
                   <!-- dropdown -->
-                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/archive.html">Archive</a></li>
-                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/portfolio.html">Portfolio</a></li>
-                  <li><a href="http://www.krasotaiskusstva.com/themes/evolution/contact.html">Contact</a></li>
+                  <li><a href="#archive.html">Archive</a></li>
+                  <li><a href="#portfolio.html">Portfolio</a></li>
+                  <li><a href="#contact.html">Contact</a></li>
                 </ul>
               </div><!--/.nav-collapse -->
             </div><!--/.container-fluid -->
@@ -92,77 +92,6 @@
         
         {{ content }}
 
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <h1>Contrary to popular belief, Lorem Ipsum is not simply random text, just not.</h1>
-        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
-        
-        <p>Tousled banh mi gastropub, literally magna williamsburg gluten-free twee banksy echo park thundercats. Intelligentsia ut keffiyeh american apparel veniam. Cupidatat laboris non, est dreamcatcher ex kale chips placeat gluten-free squid incididunt salvia occaecat. </p>
-        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
-        </div>
-        <!-- content -->
-        
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <img src="./Evolution_files/blog.jpg" alt="">
-        <h1>Investigationes demo nstraverunt lectores legere me</h1>
-        
-        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
-        </div>
-        <!-- content -->
-        
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <h1>Cupidatat laboris non, est dreamcatcher ex kale chips placeat</h1>
-        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
-        
-        <p>Comparisons to product design are compelling but also frustrating for architects and landscape architects. Our ‘product’ is always custom, never mass-produced; our budgets are small and shrinking; our projects are large, long-lived, and difficult to prototype. But prototyping lies at the heart of iterative design research: it allows designers to test their work not just against an abstracted model but with increasingly realized versions of the thing itself.<br><br>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demo nstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
-        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
-        </div>
-        <!-- content -->
-        
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <img src="./Evolution_files/blog2.jpg" alt="">
-        <h1>Investigationes demo nstraverunt lectores legere me</h1>
-        
-        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
-        </div>
-        <!-- content -->
-        
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <img src="./Evolution_files/blog3.jpg" alt="">
-        <h1>Investigationes demo nstraverunt lectores legere me</h1>
-        
-        <p>Cred street art odio, messenger bag aesthetic elit excepteur veniam pinterest freegan commodo cupidatat try-hard. Literally cliche commodo, truffaut dolore scenester placeat occaecat plaid laboris VHS ethnic chillwave photo booth ea. DIY +1 american apparel, whatever pour-over 8-bit plaid mumblecore seitan tousled before they sold out laborum.</p>
-        </div>
-        <!-- content -->
-        
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <h1>Cupidatat laboris non, est dreamcatcher ex kale chips placeat</h1>
-        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
-        
-        <p>Comparisons to product design are compelling but also frustrating for architects and landscape architects. Our ‘product’ is always custom, never mass-produced; our budgets are small and shrinking; our projects are large, long-lived, and difficult to prototype. But prototyping lies at the heart of iterative design research: it allows designers to test their work not just against an abstracted model but with increasingly realized versions of the thing itself.<br><br>Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demo nstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
-        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
-        </div>
-        <!-- content -->
-
-        <!-- content -->
-        <div class="col-lg-12 line">
-        <img src="./Evolution_files/blog4.jpg" alt="">
-        <h1>Contrary to popular belief, Lorem Ipsum is not simply random text, just not.</h1>
-        <h2>April 14th, 2017 | <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Photo</a>, <a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Typo</a></h2>
-        
-        <p>Tousled banh mi gastropub, literally magna williamsburg gluten-free twee banksy echo park thundercats. Intelligentsia ut keffiyeh american apparel veniam. Cupidatat laboris non, est dreamcatcher ex kale chips placeat gluten-free squid incididunt salvia occaecat. </p>
-        <p class="read-more"><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">Read More &nbsp;&nbsp;→</a></p>
-        </div>
-        <!-- content -->
-        
-        <div class="col-lg-12 lefted">
-        <h3><a href="http://www.krasotaiskusstva.com/themes/evolution/?ref=ki-themes#">← Older posts</a></h3>
-        </div>
         <!-- wrapper -->
       </div>
     </section>
